# TLSReveal

./: CMakeLists.txt  LICENSE  README.md
cmake/: FileEmbed.cmake  GenerateHex.cmake
dll/: CMakeLists.txt  build.cmd
dll-test/: CMakeLists.txt
dll-test/src/: dll.cpp
dll/src/: main.cpp
keyauth_example/: CMakeLists.txt
keyauth_example/src/: main.cpp
src/: Mmap.cpp  Mmap.hpp  dbg.cpp  dbg.hpp  dll.cpp  dll.hpp  includes.cpp  includes.hpp  main.cpp  utils.cpp  utils.hpp
target_dll/: CMakeLists.txt
target_dll/src/: target_dll.cpp
